[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/SmallShadow.png" type="Texture" id=1]
[ext_resource path="res://Assets/characters/monsters/Bat.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Hitbox and Hurtbox/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Entity/Enemy.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Player/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Npc/PlayerDetectionZone/PlayerDetectionZone.tscn" type="PackedScene" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Fly",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=9]
radius = 5.0
height = 8.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 8.0
height = 6.0

[sub_resource type="CapsuleShape2D" id=10]
radius = 8.0
height = 14.0

[node name="Bat" type="KinematicBody2D"]
script = ExtResource( 4 )
max_speed = 18
hoursPerKill = 3
shouldFollow = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "Fly"
speed_scale = 0.6
playing = true
offset = Vector2( 0, -12 )

[node name="Moving Collision" type="KinematicBody2D" parent="AnimatedSprite"]

[node name="Collision" type="CollisionShape2D" parent="AnimatedSprite/Moving Collision"]
position = Vector2( 0, -6 )
shape = SubResource( 9 )

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 2147483664

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, -12 )
shape = SubResource( 8 )
one_way_collision_margin = 1.8

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]
collision_mask = 8912896

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.486275 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 3

[node name="StopZone" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="StopZone" index="0"]
modulate = Color( 0.94902, 0.0745098, 0.0745098, 1 )
position = Vector2( 0, -11 )
shape = SubResource( 10 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="PlayerDetectionZone"]
[editable path="StopZone"]
